Deployment from Codesandbox.

--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "RODAS Ship Group",
-  "short_name": "RODAS Ship Group",
+  "name": "Rodas Ship Group",
+  "short_name": "Rodas",
   "theme_color": "#333333",
   "background_color": "#ffffff",
   "display": "standalone",
