--- a/manifest.json
+++ b/manifest.json
@@ -1,33 +1,33 @@
 {
   "name": "Rodas Ship Group",
   "short_name": "Rodas",
-  "theme_color": "#333333",
+  "theme_color": "#2b2a28",
   "background_color": "#ffffff",
   "display": "standalone",
   "orientation": "portrait",
   "icons": [
     {
-      "src": "img/logo/icon_72.png",
+      "src": "/assets0867/img/logo/icon_72.png",
       "type": "image/png",
       "sizes": "72x72"
     },
     {
-      "src": "img/logo/icon_144.png",
+      "src": "/assets0867img/logo/icon_144.png",
       "type": "image/png",
       "sizes": "144x144"
     },
     {
-      "src": "img/logo/icon_196.png",
+      "src": "/assets0867img/logo/icon_196.png",
       "type": "image/png",
       "sizes": "196x196"
     },
     {
-      "src": "img/logo/icon_256.png",
+      "src": "/assets0867img/logo/icon_256.png",
       "type": "image/png",
       "sizes": "256x256"
     },
     {
-      "src": "img/logo/icon_512.png",
+      "src": "/assets0867img/logo/icon_512.png",
       "type": "image/png",
       "sizes": "512x512"
     }
